Process Hacker

2.18
 * NEW/IMPROVED:
   * Completely rewritten tree list control:
     * Process Name column is now fixed to the left
     * Tooltips for column headers
     * Improved performance
     * Bug fixes
   * Updated ExtendedServices plugin:
     * Disabled editing of required privileges for services
   * Updated ExtendedTools plugin:
     * Added ETW columns for processes and network connections
   * Updated OnlineChecks plugin:
     * Added Comodo Instant Malware Analysis
 * FIXED:
   * Fixed Run As This User
   * Verification Status sorting

2.17
 * NEW/IMPROVED:
   * Added support for setting page priority
   * Added elevation support for setting priority
   * Added support for automatically using a settings file in 
     the program directory (e.g. ProcessHacker.exe.settings.xml)
   * Improved Run As mechanism
   * Updated ExtendedServices plugin:
     * Added support for editing triggers
     * Added support for editing preshutdown time-out
     * Added support for editing required privileges
     * Added elevation support for restarting services
   * Updated WindowExplorer plugin:
     * Added more window properties
 * FIXED:
   * Handle leak

2.16
 * NEW/IMPROVED:
   * Updated WindowExplorer plugin
   * PE viewer: Added version string to CLR tab
   * PE viewer: Added display of delay imports
   * PE viewer: Added Load Config tab
   * Improved wait analysis
   * Added arrows to the service list to indicate whether a 
     service is running
 * FIXED:
   * Fixed the IPv6-related workaround causing crashes
   * Incorrect handling of window positions

2.15
 * NEW/IMPROVED:
   * Updated ExtendedServices plugin
   * Updated ToolStatus plugin
   * Added DEP Status column
   * Improved User Name column
 * FIXED:
   * Image file versions
   * Workaround for an IPv6-related bug in Windows XP
   * DPCs and Interrupts in System Information tooltips
   * File dialog crash on Windows XP
   * ExtendedTools plugin: WS Watch refresh bug

2.14
 * NEW/IMPROVED: